# ach8-emu

./: CMakeLists.txt  README.md  main.c
include/: emulator.h  instructions.h
src/: emulator.c  instructions.c
